nodejs-gitops/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-svc
spec:
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
